# cmake-qt-demo

./: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
